--- a/Sudoku/css/game.css
+++ b/Sudoku/css/game.css
@@ -35,7 +35,7 @@ html {
   text-align: center;
 }
 .edit {
-  color: forestgreen;
+  color: cornflowerblue;
   -webkit-transition: background 0.2s ease-in-out;
   transition: background 0.2s ease-in-out;
 }
